fix error thawing and fix fix quote on IE

--- a/less/app.less
+++ b/less/app.less
@@ -363,7 +363,7 @@ header {
 
 	.quote& {
 		.left-quote {
-			font-family: @font-family-flag;
+			font-family: @font-family-serif-bold;
 			content:"\201C";
 			display: block;
 			position: absolute;
@@ -371,6 +371,7 @@ header {
 			left: @grid-gutter-width * 2;
 			font-weight: 700;
 			margin-left: -0.55em;
+			font-size: 1.25em;
 		}
 	}
 
